# ESP32-CPP-Framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/Apa102/: Apa102.hpp  CMakeLists.txt
components/Event/: Event.hpp
components/Exceptions/: Exceptions.hpp
components/Gpio/: CMakeLists.txt  Gpio.hpp
components/HttpServer/: CMakeLists.txt  HttpServer.hpp  HttpServerUri.hpp
components/Json/: CMakeLists.txt  Json.hpp
components/Nvs/: CMakeLists.txt  Nvs.hpp
components/Spi/: CMakeLists.txt  Spi.hpp
components/Wifi/: CMakeLists.txt  Kconfig.projbuild  Wifi.hpp  WifiAp.hpp  WifiClient.hpp  WifiSmartConfig.hpp
main/: CMakeLists.txt  HttpApa102.hpp  HttpWifiConfig.bin.html  HttpWifiConfig.hpp  clearNvsButton.hpp  main.cpp
